--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    @apply bg-neutral-100;
+  }
+
+  h1 {
+    @apply font-bold text-xl;
+  }
+
+  h2 {
+    @apply font-bold text-lg;
+  }
+}
+
+@layer components {
+  .card {
+    @apply bg-white rounded-lg p-2;
+  }
+}
