Add pagination on posts lists

--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -21,7 +21,17 @@
     @apply bg-white rounded-lg p-2;
   }
 
+  .tag-link {
+    @apply rounded-md px-1 font-bold no-underline font-sans text-sm
+    bg-neutral-200 text-neutral-800
+    hover:bg-yellow-200 hover:text-black
+  }
+
+  .nav-link {
+    @apply px-2 rounded-full hover:bg-neutral-200
+  }
+
   .menu-link {
-    @apply font-bold px-2 rounded-full hover:bg-neutral-200
+    @apply font-bold nav-link
   }
 }
