--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -4,7 +4,11 @@
 
 @layer base {
   html {
-    @apply bg-neutral-100;
+    @apply bg-neutral-100 transition-colors duration-200;
+  }
+
+  html.dark {
+    @apply bg-neutral-900 transition-colors duration-200 text-neutral-200;
   }
 
   h1 {
@@ -18,18 +22,23 @@
 
 @layer components {
   .card {
-    @apply bg-white rounded-lg p-2 drop-shadow-md;
+    @apply bg-white dark:bg-neutral-800 rounded-lg p-2 drop-shadow-md;
   }
 
   .tag-link {
     @apply rounded-md px-1 font-bold no-underline font-sans text-sm
     transition-all duration-300
     bg-neutral-200 text-neutral-700
-    hover:bg-purple-800 hover:text-white;
+    hover:bg-purple-800 hover:text-white
+    dark:bg-neutral-400 dark:text-neutral-800
+    dark:hover:bg-purple-800 dark:hover:text-white;
   }
 
   .nav-link {
-    @apply px-2 rounded-full hover:bg-neutral-200 transition-all duration-300;
+    @apply px-2 rounded-full
+    text-black dark:text-neutral-200
+    hover:bg-neutral-200 dark:hover:bg-neutral-700
+    transition-all duration-300;
   }
 
   .menu-link {
