--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -22,7 +22,7 @@
 
 @layer components {
   .card {
-    @apply bg-white dark:bg-neutral-800 rounded-lg p-2 drop-shadow-md;
+    @apply bg-white dark:bg-neutral-800 rounded-lg p-2 shadow-md shadow-neutral-500/20;
   }
 
   .tag-link {
