--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -12,7 +12,7 @@
   }
 
   h1 {
-    @apply font-bold text-lg;
+    @apply font-bold text-2xl;
   }
 
   h2 {
@@ -22,7 +22,7 @@
 
 @layer components {
   .card {
-    @apply bg-white dark:bg-neutral-800 rounded-lg p-2 shadow-md shadow-neutral-500/20;
+    @apply bg-white dark:bg-neutral-800 rounded-lg p-2 shadow-md shadow-neutral-500/20 dark:shadow-black/20;
   }
 
   .tag-link {
