--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -24,6 +24,17 @@
   }
 }
 
+@layer utilities {
+  .theme-prose-link {
+    @apply prose-a:text-purple-900 dark:prose-a:text-purple-600 
+           hover:prose-a:text-purple-700 dark:hover:prose-a:text-purple-500;
+  }
+
+  .theme-font {
+    @apply font-sans text-base;
+  }
+}
+
 @layer components {
   .card {
     @apply bg-white dark:bg-neutral-800 rounded-lg p-2 shadow-md shadow-neutral-500/20 dark:shadow-black/20;
@@ -38,11 +49,19 @@
     dark:hover:bg-purple-600 dark:hover:text-white;
   }
 
+  .pagination-arrow {
+    @apply h-4 w-4 inline-block text-neutral-700 dark:text-neutral-200;
+  }
+
   .nav-link {
     @apply px-2 rounded-full
     text-black dark:text-neutral-200
     hover:bg-neutral-200 dark:hover:bg-neutral-700
     transition-all duration-300;
+  }
+
+  .icon-link {
+    @apply h-7 w-7 rounded-md hover:bg-neutral-200 dark:hover:bg-neutral-700 transition-all duration-300;
   }
 
   .menu-link {
@@ -52,6 +71,14 @@
   .not-published-tag {
     @apply rounded-md px-1 font-bold no-underline font-sans text-sm text-center
     h-5 bg-red-300 text-red-800;
+  }
+
+  .separator {
+    @apply bg-purple-900 dark:bg-purple-600 border-0 h-1;
+  }
+
+  .theme-prose {
+    @apply prose prose-neutral dark:prose-invert theme-prose-link font-sans;
   }
 }
 
