--- a/site/content/slide-decks/slides/template/index.html
+++ b/site/content/slide-decks/slides/template/index.html
@@ -7,14 +7,17 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>reveal.js</title>
+    <title>reveal.js template</title>
 
-    <link rel="stylesheet" href="/revealjs/dist/reset.css" />
-    <link rel="stylesheet" href="/revealjs/dist/reveal.css" />
-    <link rel="stylesheet" href="/revealjs/dist/theme/pm.css" />
+    <link rel="stylesheet" href="/vendor/revealjs/dist/reset.css" />
+    <link rel="stylesheet" href="/vendor/revealjs/dist/reveal.css" />
+    <link rel="stylesheet" href="/revealjs-themes/pm.css" />
 
     <!-- Theme used for syntax highlighted code -->
-    <link rel="stylesheet" href="/revealjs/plugin/highlight/monokai.css" />
+    <link
+      rel="stylesheet"
+      href="/vendor/revealjs/plugin/highlight/monokai.css"
+    />
   </head>
   <body>
     <div class="reveal">
@@ -31,10 +34,10 @@
       </div>
     </div>
 
-    <script src="/revealjs/dist/reveal.js"></script>
-    <script src="/revealjs/plugin/notes/notes.js"></script>
-    <script src="/revealjs/plugin/markdown/markdown.js"></script>
-    <script src="/revealjs/plugin/highlight/highlight.js"></script>
+    <script src="/vendor/revealjs/dist/reveal.js"></script>
+    <script src="/vendor/revealjs/plugin/notes/notes.js"></script>
+    <script src="/vendor/revealjs/plugin/markdown/markdown.js"></script>
+    <script src="/vendor/revealjs/plugin/highlight/highlight.js"></script>
     <script>
       // More info about initialization & config:
       // - https://revealjs.com/initialization/
