--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -7,10 +7,6 @@
     @apply bg-neutral-100 transition-colors duration-200;
   }
 
-  html.dark {
-    @apply bg-neutral-900 transition-colors duration-200 text-neutral-200;
-  }
-
   html.resume {
     @apply bg-neutral-100;
   }
@@ -26,8 +22,8 @@
 
 @layer utilities {
   .theme-prose-link {
-    @apply prose-a:text-purple-900 dark:prose-a:text-purple-600 
-           hover:prose-a:text-purple-700 dark:hover:prose-a:text-purple-500;
+    @apply prose-a:text-purple-900  
+           hover:prose-a:text-purple-700;
   }
 
   .theme-font {
@@ -37,31 +33,29 @@
 
 @layer components {
   .card {
-    @apply bg-white dark:bg-neutral-800 rounded-lg p-2 shadow-md shadow-neutral-500/20 dark:shadow-black/20;
+    @apply bg-white rounded-lg p-2 shadow-md shadow-neutral-500/20;
   }
 
   .tag-link {
     @apply rounded-md px-1 font-bold no-underline font-sans text-sm
     transition-all duration-300
     bg-neutral-200 text-neutral-700
-    hover:bg-purple-800 hover:text-white
-    dark:bg-neutral-400 dark:text-neutral-800
-    dark:hover:bg-purple-600 dark:hover:text-white;
+    hover:bg-purple-800 hover:text-white;
   }
 
   .pagination-arrow {
-    @apply h-4 w-4 inline-block text-neutral-700 dark:text-neutral-200;
+    @apply h-4 w-4 inline-block text-neutral-700;
   }
 
   .nav-link {
     @apply px-2 rounded-full
-    text-black dark:text-neutral-200
-    hover:bg-neutral-200 dark:hover:bg-neutral-700
+    text-black
+    hover:bg-neutral-200
     transition-all duration-300;
   }
 
   .icon-link {
-    @apply h-7 w-7 rounded-md hover:bg-neutral-200 dark:hover:bg-neutral-700 transition-all duration-300;
+    @apply h-7 w-7 rounded-md hover:bg-neutral-200 transition-all duration-300;
   }
 
   .menu-link {
@@ -74,11 +68,11 @@
   }
 
   .separator {
-    @apply bg-purple-900 dark:bg-purple-600 border-0 h-1;
+    @apply bg-purple-900 border-0 h-1;
   }
 
   .theme-prose {
-    @apply prose prose-neutral dark:prose-invert theme-prose-link font-sans;
+    @apply prose prose-neutral theme-prose-link font-sans;
   }
 }
 
